partial commit of imag mker

--- a/camConfig.json
+++ b/camConfig.json
@@ -1,5 +1,6 @@
 {
     "192.168.1.221": {
+        "resize_factor": 0.71,
         "padding_info": {
             "top": 584,
             "bottom": 584,
@@ -12,15 +13,23 @@
         ],
         "ROIs": [
             [
-                1335.6552604698666,
-                1399.2630234933608,
-                2144.2288049029617,
-                787.0888661899896,
+                1097.698161389172,
+                1349.579673135853,
+                1704.9233912155255,
+                907.3748723186923,
+                0
+            ],
+            [
+                1926.6256384065364,
+                1468.5582226762003,
+                977.9775280898875,
+                648.4984678243106,
                 0
             ]
         ]
     },
     "192.168.1.222": {
+        "resize_factor": 0.6,
         "padding_info": {
             "top": 0,
             "bottom": 0,
@@ -33,22 +42,23 @@
         ],
         "ROIs": [
             [
-                1330.654121863799,
-                1606.599641577062,
-                671.1971326164874,
-                1621.7921146953404,
+                1312.9910394265232,
+                1587.3308243727606,
+                687.2544802867383,
+                1628.2150537634407,
                 0
             ],
             [
-                1272.847670250896,
-                1034.95806451613,
-                786.8100358422937,
-                555.5842293906808,
+                1269.636200716846,
+                1039.7752688172052,
+                773.9641577060931,
+                539.5268817204301,
                 0
             ]
         ]
     },
     "192.168.1.223": {
+        "resize_factor": 0.6,
         "padding_info": {
             "top": 0,
             "bottom": 0,
@@ -61,15 +71,16 @@
         ],
         "ROIs": [
             [
-                1351.5286738351253,
-                1332.0189964157714,
-                674.4086021505377,
-                2170.9534050179213,
+                1341.8942652329747,
+                1330.4132616487464,
+                706.5232974910393,
+                2135.627240143369,
                 0
             ]
         ]
     },
     "192.168.1.224": {
+        "resize_factor": 1,
         "padding_info": {
             "top": 0,
             "bottom": 0,
@@ -82,22 +93,30 @@
         ],
         "ROIs": [
             [
-                1760.991039426523,
-                275.4455197132627,
-                1249.2616487455196,
-                32.11469534050184,
-                1.472574891279985
+                1460.7186379928314,
+                909.7107526881728,
+                745.0609318996417,
+                1474.0645161290322,
+                0
             ],
             [
-                1255.18458781362,
-                1987.1587813620079,
-                822.1362007168457,
-                693.6774193548385,
+                1264.8189964157705,
+                1977.5243727598574,
+                847.8279569892472,
+                655.1397849462369,
+                0
+            ],
+            [
+                1414.1523297491037,
+                1457.2663082437284,
+                594.1218637992829,
+                1207.5125448028675,
                 0
             ]
         ]
     },
     "192.168.1.225": {
+        "resize_factor": 0.72,
         "padding_info": {
             "top": 584,
             "bottom": 584,
@@ -110,22 +129,23 @@
         ],
         "ROIs": [
             [
-                1580.1496424923382,
-                1386.188457609806,
-                1702.3084780388149,
-                760.9397344228803,
+                1614.1435137895805,
+                1411.0301327885597,
+                1602.9417773237992,
+                800.1634320735443,
                 0
             ],
             [
-                526.339632277834,
-                1233.2160367722167,
-                515.1378958120531,
-                800.1634320735445,
+                936.8810010214497,
+                1303.8186925434115,
+                1304.8416751787536,
+                669.4177732379978,
                 0
             ]
         ]
     },
     "192.168.1.226": {
+        "resize_factor": 0.63,
         "padding_info": {
             "top": 0,
             "bottom": 0,
@@ -138,15 +158,16 @@
         ],
         "ROIs": [
             [
-                1308.173835125448,
-                1031.7465949820798,
-                703.3118279569892,
-                1634.637992831541,
-                0
+                1459.1129032258063,
+                238.5136200716854,
+                992.3440860215053,
+                16.057347670250692,
+                0.9270352697721765
             ]
         ]
     },
     "192.168.1.227": {
+        "resize_factor": 0.63,
         "padding_info": {
             "top": 0,
             "bottom": 0,
@@ -159,15 +180,30 @@
         ],
         "ROIs": [
             [
-                1292.1164874551969,
-                291.5028673835136,
-                947.3835125448029,
-                70.65232974910396,
-                -175.73498950622314
+                1608.4462365591396,
+                299.53154121863895,
+                1104.7455197132617,
+                93.13261648745492,
+                4.818773527945191
+            ],
+            [
+                653.0340501792114,
+                246.54229390681098,
+                536.31541218638,
+                44.96057347670239,
+                -175.20796595306808
+            ],
+            [
+                1539.3996415770607,
+                278.6569892473126,
+                1101.5340501792114,
+                83.49820788530451,
+                4.334830487909003
             ]
         ]
     },
     "192.168.1.228": {
+        "resize_factor": 0.72,
         "padding_info": {
             "top": 0,
             "bottom": 0,
@@ -180,17 +216,24 @@
         ],
         "ROIs": [
             [
-                1306.5681003584227,
-                1789.6534050179218,
-                725.7921146953404,
-                1229.9928315412185,
+                1304.9623655913979,
+                1804.1050179211477,
+                703.3118279569892,
+                1207.512544802867,
                 0
             ],
             [
-                1454.295698924731,
-                869.5673835125458,
+                1457.507168458781,
+                856.721505376345,
                 706.5232974910393,
-                642.2939068100359,
+                687.2544802867383,
+                0
+            ],
+            [
+                1393.2777777777778,
+                1291.8756272401442,
+                584.4874551971327,
+                1390.5663082437277,
                 0
             ]
         ]
