--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,9 @@ torch = {version = "^2.5.1+cu118", source = "pytorch"}
 torchvision = {version = "^0.20.1+cu118", source = "pytorch"}
 torchaudio = {version = "^2.5.1+cu118", source = "pytorch"}
 tabulate = "^0.9.0"
-PyQt5 = "^5.15.11"
-PyQt5-Qt5 ="^5.15.2" 
 PyQt5-sip = "^12.15.0"
 qtawesome = "^1.3.1"
+opencv-python = "^4.10.0.84"
 
 
 [build-system]
