--- a/dataset0/data.yaml
+++ b/dataset0/data.yaml
@@ -1,8 +1,11 @@
 names:
 - bag1
 - bag2
-- pill
-nc: 3
-path: dataset7
+- bag
+- box1
+- p1
+- p2
+nc: 6
+path: dataset0
 train: images/train
 val: images/val
