--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ tabulate = "^0.9.0"
 PyQt5-sip = "^12.15.0"
 qtawesome = "^1.3.1"
 opencv-python = "^4.10.0.84"
+scikit-image = "^0.24.0"
 
 
 [build-system]
